fix(theme): fix button group spacing in nz-form

--- a/packages/theme/styles/app/antd/_preserve-white-spaces.less
+++ b/packages/theme/styles/app/antd/_preserve-white-spaces.less
@@ -3,8 +3,14 @@
   [nz-form] {
     // 按钮
     .ant-btn + .ant-btn,
-    .ant-btn + nz-popconfirm {
+    .ant-btn + nz-popconfirm,
+    nz-popconfirm + .ant-btn {
       margin-left: @white-spacing;
+    }
+    .ant-btn-group {
+      .ant-btn + .ant-btn {
+        margin-left: -1px;
+      }
     }
   }
   nz-sf + simple-table {
